Add Facebook cookie data to appstate.json

--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-এখানে আপনার ফেসবুক আইডির কুকি বসান ✅
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261567373897005%22%3A%22tHwalquq%22%2C%2261564055968301%22%3A%22nKxcpRw8%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.428Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "sb",
+        "value": "irX2aJgcDfCrC0A31J_u67Fe",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B712x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "datr",
+        "value": "Yub5aMzr1UABKXbaTZ9c3YqO",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61572941964897",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "xs",
+        "value": "31%3AnUTN1AAMw01q3g%3A2%3A1761267006%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "fr",
+        "value": "0PFKz8slie5aLnW1o.AWd5Pc_JO4W0XNw-6asegCd-lrU-HMX-2PAbgvnyvRY4Rl0gquk.Bo9rWK..AAA.0.0.Bo-s1C.AWcv3rnXHDZBZLcMYrMt7d4FDNo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "pas",
+        "value": "61567373897005%3A9PdXq2d8U9%2C61564055968301%3AFLIk4sbLaz%2C61572941964897%3AUReqdAQ1b1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101422637%3BT%3A29354450",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.430Z",
+        "lastAccessed": "2025-10-24T02:40:30.430Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2964%3Btimestamp%3A1761267010",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T02:40:30.431Z",
+        "lastAccessed": "2025-10-24T02:40:30.431Z"
+    }
+      ]
